@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Map>
+  <Width>400</Width>
+  <Height>400</Height>
+  <Extents>-110,20,-80,40</Extents>
+  <Projection>+init=epsg:4326</Projection>
+  <Layers>
+    <Layer>
+      <LineWidth>1</LineWidth>
+      <PointSize>1</PointSize>
+      <LineColor>255,65,105,225</LineColor>
+      <FillColor>255,240,248,255</FillColor>
+      <Projection>+init=epsg:4326</Projection>
+      <Id>states</Id>
+      <LineStyle>Solid</LineStyle>
+      <Data providerType="Cumberland.IFileFeatureProvider"
+      providerInstance="Cumberland.Data.Shapefile.Shapefile">
+        <FilePath>../shape_eg_data/mexico/states.shp</FilePath>
+      </Data>
+    </Layer>
+  </Layers>
+</Map>
