@@ -28,13 +28,8 @@ using System.Web.UI;
 
 namespace Cumberland.TileViewerTest
 {
-	
-	
+
 	public partial class Default : System.Web.UI.Page
 	{
-		public virtual void button1Clicked(object sender, EventArgs args)
-		{
-			button1.Text = "You clicked me";
-		}
 	}
 }
